# zk_Privacy_Pool

./: .gitignore  API_CONNECTION_SUMMARY.md  BLOCKCHAIN_VERIFICATION_FIX.md  COMPLETE_IMPLEMENTATION.md  CRITICAL_PROBLEMS_SOLVED.md  Cargo.toml  FINAL_IMPLEMENTATION_SUMMARY.md  FRONTEND_FIX_IMMEDIATE.md  HONEST_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  PRIVACY_POOL_PRODUCTION.md  PrivacyPoolFixed-ABI.json  README.md  ZISK_IMPLEMENTATION_SUMMARY.md  ZISK_PRECOMPILE_INTEGRATION.md  check-balance.js  deployment-fixed.json  deployment.json  env.example  frontend-fixed-integration.js  frontend_deposit_fix.js  hardhat-fixed.config.js  hardhat.config.js  integration_roadmap.md  package-lock.json  package.json  run_real_eth_test.sh  setup.sh  simple-check.js  standalone_Cargo.toml  standalone_api_fixed.rs  standalone_api_server.rs  standalone_working_api.rs  test_blockchain_verification.sh  zeropool_analysis.md  zisk_privacy_pool_plan.md
Frontend/: README.md  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
api_server/: Cargo.toml
api_server/src/: main.rs
artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
artifacts/contracts/ETHPrivacyPool.sol/: ETHPrivacyPool.json
artifacts/contracts/Entrypoint.sol/: Entrypoint.json
artifacts/contracts/PrivacyPool.sol/: PrivacyPool.json
artifacts/contracts/State.sol/: State.dbg.json  State.json
artifacts/contracts/Verifier.sol/: Verifier.json
artifacts/contracts/interfaces/IEntrypoint.sol/: IEntrypoint.json
artifacts/contracts/interfaces/IPrivacyPool.sol/: IPrivacyPool.json
artifacts/contracts/interfaces/IVerifier.sol/: IVerifier.json
artifacts/contracts/lib/Constants.sol/: Constants.dbg.json  Constants.json
artifacts/contracts/lib/ProofLib.sol/: ProofLib.json
artifacts/contracts/poseidon/PoseidonT4.sol/: PoseidonT4.json
artifacts/src/contracts/PrivacyPool.sol/: PrivacyPool.dbg.json  PrivacyPool.json
artifacts/src/contracts/PrivacyPoolFixed.sol/: PrivacyPoolFixed.dbg.json  PrivacyPoolFixed.json
cache/: console-history.txt  solidity-files-cache.json
circuits/: commitment.circom
contracts/: ETHPrivacyPool.sol  EnhancedPrivacyPool.sol  Entrypoint.sol  MerkleTree.sol  PoseidonT4.sol  PrivacyPool.sol  README.md  State.sol  Verifier.sol
contracts/interfaces/: IEntrypoint.sol  IPrivacyPool.sol  IVerifier.sol
contracts/lib/: Constants.sol  ProofLib.sol
contracts/poseidon/: PoseidonT4.sol
examples/: crypto_architecture_demo.rs  enhanced_merkle_tree_demo.rs
privacy-pool-zkvm/: Cargo.toml  README.md  create_test_input.rs  run_test.sh  test_dual_proofs.sh
privacy-pool-zkvm/proof/: result.json
privacy-pool-zkvm/proof_individual/: result.json
privacy-pool-zkvm/proof_pool_ultra/: result.json
privacy-pool-zkvm/real_privacy_pool_proof/: result.json
privacy-pool-zkvm/src/: create_individual_tx_test.rs  create_multi_user_test.rs  create_pool_batch_test.rs  create_real_privacy_pool_test.rs  create_simple_individual_test.rs  create_simple_pool_batch_test.rs  create_ultra_simple_pool_test.rs  create_ultra_simple_test.rs  lib.rs  main.rs  merkle_tree.rs  privacy_pool.rs  real_privacy_pool.rs  simple_individual_tx.rs  simple_pool_accounting.rs  simple_test.rs  transaction.rs  ultra_simple_pool.rs  ultra_simple_tx.rs  utxo.rs
scripts/: deploy-fixed-contract.js  deploy-sepolia.js  deploy.js  full-deployment.js  generate-abi.js  test-deployed-contract.js
src/: canonical_spec.rs  complete_eth_to_utxo_test.rs  complete_example.rs  enhanced_merkle_tree.rs  enhanced_privacy_pool.rs  enhanced_utxo_system.rs  eth_deposit_handler.rs  eth_to_utxo_converter.rs  hash_utils.rs  integration_test.rs  integration_test_full.rs  lib.rs  main.rs  merkle_tree.rs  pool_accounting.rs  real_blockchain_integration.rs  redjubjub.rs  relayer_integration_test.rs  simple_anvil_test.rs  tornado_merkle_tree.rs  transaction.rs  tree_inspector.rs  utxo.rs  utxo_privacy_pool.rs  utxo_system.rs  wallet_deposit_test.rs  zk_privacy_proofs.rs  zk_proofs.rs
src/api/: auth.rs  encrypted_notes.rs  handlers.rs  handlers.rs.backup  middleware.rs  mod.rs  server.rs  server.rs.backup  types.rs
src/circuits/: CommitmentCircuit.circom  basic_merkle.circom  circuit.json  compile.js  complete_spending.circom  merkle_tree_fixed.circom  simple_complete_spending.circom  spend.circom  spending_proof.circom
src/contracts/: MockVerifier.sol  PrivacyPool.sol  PrivacyPoolFixed.sol  README.md
src/crypto/: architecture_compliance.rs  bn254.rs  commitments.rs  ecies.rs  key_derivation.rs  merkle_proofs.rs  mod.rs  nullifiers.rs  poseidon.rs  signatures.rs
src/database/: batch_writer.rs  cache_manager.rs  mod.rs  query_engine.rs  schema.rs
src/merkle/: canonical_smt.rs  enhanced_merkle_tree.rs  mod.rs  tornado_merkle_tree.rs  tree_inspector.rs  tree_inspector.rs.backup
src/privacy/: complete_example.rs  enhanced_privacy_pool.rs  mod.rs  note_scanner.rs  privacy_pool.rs  types.rs  utxo_pool.rs
src/relayer/: blockchain_integration.rs  blockchain_integration.rs.backup  data_service.rs  deposit_watcher.rs  encrypted_notes.rs  encrypted_notes_integration_test.rs  encrypted_notes_integration_test.rs.backup  integration_test.rs  integration_test.rs.backup  mod.rs  real_blockchain_integration.rs  tree_service.rs  wallet_deposit_test.rs  wallet_deposit_test.rs.backup
src/scripts/: PrivacyPoolTest.js  contract_helpers.js  demo_complete_flow.js  deploy.js  deploy_privacy_pool.js  full-deployment.js  gen_note.ts  generate-test-proof.js  generate_accounts.js  integration_test.js  verify-proof.js  wallet_create_note.ts
src/utils/: hash_utils.rs  mod.rs  redjubjub.rs  zisk_precompiles.rs  zk_proofs.rs
src/utxo/: canonical_utxo.rs  converter.rs  converter.rs.backup  eth_deposit_handler.rs  indexing.rs  mod.rs  note.rs  transaction.rs  utxo.rs  utxo_manager.rs
standalone_api/: Cargo.toml  main.rs
test/: PrivacyPoolFixed.test.js  PrivacyPoolVerifier.test.js
