[package]
name = "privacy-pool-zkvm"
version = "0.1.0"
edition = "2021"
default-run = "privacy-pool-zkvm"

[[bin]]
name = "privacy-pool-zkvm"
path = "src/main.rs"

[[bin]]
name = "individual_tx"
path = "src/individual_tx.rs"

[[bin]]
name = "pool_accounting"
path = "src/pool_accounting.rs"

[[bin]]
name = "ultra_simple_tx"
path = "src/ultra_simple_tx.rs"

[[bin]]
name = "simple_pool_accounting"
path = "src/simple_pool_accounting.rs"

[[bin]]
name = "ultra_simple_pool"
path = "src/ultra_simple_pool.rs"

[[bin]]
name = "real_privacy_pool"
path = "src/real_privacy_pool.rs"

[[bin]]
name = "test_full_privacy_pool"
path = "src/bin/test_full_privacy_pool.rs"

[dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
# Crypto dependencies
sha2 = "0.10.8"
poseidon-rs = "0.0.10"
ff = "0.13"
pairing = "0.23"
# ZK-SNARK dependencies for actual zero-knowledge proof generation
bellman = "0.14"
bls12_381 = "0.8"
group = "0.13"
# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
# Utilities
byteorder = "1.5.0"
anyhow = "1.0"
thiserror = "1.0"
# Random number generation
rand = "0.8"
# Hex encoding
hex = "0.4"
# Web3 integration for real blockchain connection
web3 = "0.19"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
# Cryptographic dependencies for proper key management
secp256k1 = { version = "0.27", features = ["recovery", "global-context"] }
# Ethereum ABI encoding/decoding
ethabi = "18.0"