[package]
name = "privacy-pool-zkvm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.28"
rand = "0.8"
web3 = "0.19"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
thiserror = "1.0"
# Production database
rocksdb = "0.21"
# Performance and concurrency
rayon = "1.7"
parking_lot = "0.12"
dashmap = "5.4"
lru = "0.10"
# API server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "test_commitment_insertion"
path = "src/bin/test_commitment_insertion.rs"

[[bin]]
name = "test_full_privacy_pool"
path = "src/bin/test_full_privacy_pool.rs"

[[bin]]
name = "test_secure_converter"
path = "src/bin/test_secure_converter.rs"

[[bin]]
name = "test_simple_merkle"
path = "src/bin/test_simple_merkle.rs"

[[bin]]
name = "verify_security_claims"
path = "src/bin/verify_security_claims.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "simple_api_server"
path = "src/bin/simple_api_server.rs"

[[bin]]
name = "working_api_server"
path = "src/bin/working_api_server.rs"
