[package]
name = "privacy-pool-zkvm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery"] }
rand = "0.8"
web3 = "0.19"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
thiserror = "1.0"
# Production database
rocksdb = "0.21"
# Performance and concurrency
rayon = "1.7"
parking_lot = "0.12"
dashmap = "5.4"
lru = "0.10"
# API server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0"
# Cryptographic dependencies
ed25519-dalek = "2.0"
curve25519-dalek = "4.0"
blake2 = "0.10"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
subtle = "2.5"
hmac = "0.12"
# ECDH and AEAD for encrypted notes
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
aead = "0.5"
rand_core = "0.6"
k256 = { version = "0.12", features = ["ecdh"] }
serde_with = "3.0"
bincode = "1.3"
# ZKVM dependencies - currently not available
# ziskos = { git = "https://github.com/ZKiskos/ZKiskos", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"


[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "simple_api_server"
path = "src/bin/simple_api_server.rs"

[[bin]]
name = "working_api_server"
path = "src/bin/working_api_server.rs"
