[package]
name = "privacy-pool-zkvm"
version = "0.1.0"
edition = "2021"
default-run = "privacy-pool-zkvm"

[[bin]]
name = "create_multi_user_test"
path = "src/create_multi_user_test.rs"

[[bin]]
name = "simple_test"
path = "src/simple_test.rs"

[dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
# Crypto dependencies
sha2 = "0.10.8"
# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
# Utilities
byteorder = "1.5.0"
anyhow = "1.0"
thiserror = "1.0"
# Random number generation
rand = "0.8"